--- a/Assignment_2/assignment_2_code/package.json
+++ b/Assignment_2/assignment_2_code/package.json
@@ -2,6 +2,7 @@
   "name": "assignment_2_code",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "dependencies": {
     "dotenv": "^16.5.0",
     "entities": "^2.2.0",
@@ -26,7 +27,7 @@
     "xtend": "^4.0.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
